--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@reduxjs/toolkit": "^2.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
@@ -21,7 +22,9 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.2.0",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
